--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "dist"
   ],
   "scripts": {
+    "clean": "rimraf ./dist",
+    "prebuild": "npm run clean",
     "build": "tsc",
     "test": "vitest run"
   },
@@ -50,6 +52,7 @@
   "devDependencies": {
     "@types/node": "^25.3.0",
     "binary-parser": "^2.3.0",
+    "rimraf": "^6.1.3",
     "typescript": "^5.9.3",
     "vitest": "^4.0.18"
   },
